# Examen_Parcial3

./: CMakeLists.txt  README.md  main.c  main.cpp
EJ_C++/Asistencias/: registro_asistencias.cpp  registro_asistencias.h
EJ_C++/Estudiante/: estudiante.cpp  estudiante.h
EJ_C++/Materias/: gestion_materias.cpp  gestion_materias.h
Ej_C/: Asistencia.c  Asistencia.h  Estudiante.c  Estudiante.h  Materias.h  main.c
Ej_C/Asistencia/: Asistencia.c  Asistencia.h
Ej_C/Estudiante/: Estudiante.c  Estudiante.h
Ej_C/Materias/: Materias.c  Materias.h
